--- a/WebApp/src/app/features/Procurement/supplierlist/supplierlist.component.html
+++ b/WebApp/src/app/features/Procurement/supplierlist/supplierlist.component.html
@@ -2,7 +2,7 @@
 <div class="grid">
     <div class="col-12">
         <div class="card">
-            <h4>Supplier Application</h4>
+            <h4>Pending list for Assessment</h4>
             <div [hidden]="formDisplay">
                 <p-tabView [activeIndex]="index" (onChange)="function($event)">
                     <p-tabPanel header="Basic Info">
@@ -843,8 +843,8 @@
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
-                <button pButton pRipple type="button" label="Edit" (click)="loadSupplierinfoToEdit()" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <!--<button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadSupplierinfoToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
@@ -852,7 +852,7 @@
                         <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
                         <button class="pi pi-check risBtn risSave" (click)="deleteSupplierinfo()"> Yes</button>
                     </ng-template>
-                </p-dialog>
+                </p-dialog>-->
 
                 <p-table #dt1 [value]="supplierinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selectedsupplierinfo" dataKey="SupplierId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)"
