--- a/WebApp/src/app/features/administrative/organogram/organogram.component.html
+++ b/WebApp/src/app/features/administrative/organogram/organogram.component.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="field col-6 md:col-6">
                                     <div class="field col-12 md:col-12">
-                                        <label for="" class=" d-md-inline-flex" pTooltip="Department" tooltipPosition="top">Department2<span class="req">*:</span></label>
+                                        <label for="" class=" d-md-inline-flex" pTooltip="Department" tooltipPosition="top">{{DepartmentLabel}}<span class="req">*:</span></label>
 
                                         <!--<input id="float-input p-fluid" type="text" formControlName="department" pInputText>-->
                                         <p-dropdown [options]="drpdwnDepartmentList" formControlName="department_id" placeholder="--Select--" [ngClass]="{ 'is-invalid': submitted && f.department_id.errors }"
