--- a/WebApp/src/assets/ext-style.css
+++ b/WebApp/src/assets/ext-style.css
@@ -34,6 +34,7 @@
     box-shadow: 0.7px 0.7px 5px #888888;
 }
 
+
 .risEdit {
     color: #FFFFFF;
     background-color: #198754;
@@ -226,4 +227,32 @@
 }
 .layout-menu li a{
     border-radius:0!important;
+}
+
+
+.risBtnAssign {
+    position: relative;
+    line-height: 1 !important;
+    border: 1px solid transparent;
+    /*padding: 0.50rem 0.65rem;*/
+    padding-left: 0.60rem;
+    padding-right: 0.60rem;
+    padding-top: .65rem !important;
+    padding-bottom: .55rem;
+    box-shadow: 0.7px 0.7px 3px #888888;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    text-align: center;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+    margin-top:25px;
+}
+
+.risAssign {
+    color: #FFFFFF;
+    background-color: #198754;
+    border-color: #198754;
+    box-shadow: 0.7px 0.7px 5px #888888;
 }
