--- a/WebApp/src/app/features/Procurement/supplier-application/supplier-application.component.html
+++ b/WebApp/src/app/features/Procurement/supplier-application/supplier-application.component.html
@@ -3,14 +3,7 @@
     <div class="col-12">
         <div class="card">
             <h4>Supplier Application</h4>
-            <!--<div class="p-fluid grid col-12">
 
-
-                <div *ngFor="let category of categories;let i = index" class="p-field-checkbox text-start row flex flex-row flex-nowrap">
-                    <p-checkbox name="group[i]" value="category" binary="true" [value]="category" (onChange)="onCheckboxChange($event,category.id,category.name)" formControlName="ecommerce_platforms_id" [inputId]="category.id"></p-checkbox>
-                    <label [for]="category.id" class="ml-1" style="margin-right: 40px!important;">{{category.name}}</label>
-                </div>
-            </div>-->
             <div [hidden]="formDisplay">
                 <p-tabView [activeIndex]="index" (onChange)="function($event)">
                     <p-tabPanel header="Basic Info">
@@ -309,16 +302,25 @@
 
                                     <div class="field col-12 md:col-12">
                                         <label pTooltip="Casual Worker" tooltipPosition="top">Peer Platforms </label>
-                                        <div class=" row flex text-center p-fluid">
-                                            <div *ngFor="let category of categories;let i = index" class="p-field-checkbox text-start row flex flex-row flex-nowrap">
-                                                <p-checkbox name="group[i]" value="category" binary="true" [value]="category" (onChange)="onCheckboxChange($event,category.id,category.name)" formControlName="ecommerce_platforms_id" [inputId]="category.id"></p-checkbox>
-                                                <label [for]="category.id" class="ml-1" style="margin-right: 40px!important;">{{category.name}}</label>
-                                            </div>
-                                        </div>
+                                        <!--<div class=" row flex text-center p-fluid">
+                        <div *ngFor="let category of categories;let i = index" class="p-field-checkbox text-start row flex flex-row flex-nowrap">
+                            <p-checkbox name="group[i]" value="category" binary="true" [value]="category" (onChange)="onCheckboxChange($event,category.id,category.name)" [inputId]="category.id"></p-checkbox>
+                            <label [for]="category.id" class="ml-1" style="margin-right: 40px!important;">{{category.name}}</label>
+                        </div>
+                    </div>-->
+
                                     </div>
                                 </div>
                             </div>
                         </form>
+                    
+
+                        <div class="p-fluid grid col-12">
+                            <div *ngFor="let category of categories;let i = index" class="field-checkbox">
+                                <p-checkbox name="group[i]" value="category" binary="true" [value]="category" (onChange)="onCheckboxChange($event,category.id,category.name)" [(ngModel)]="category.status" [inputId]="category.id"></p-checkbox>
+                                <label [for]="category.id">{{category.name}}</label>
+                            </div>
+                        </div>
                         <div class="flex justify-content-end pr-2">
                             <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
                             <button pButton pRipple type="button" (click)="onBusinessFormSubmit()" label="Save as Draft" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
@@ -1173,7 +1175,7 @@
                                             <label pTooltip="Credit Limit" tooltipPosition="top">Credit Limit<span class="req">*</span> </label>
                                             <input type="number" min="0" class="from-control" formControlName="credit_limit"
                                                    [ngClass]="{ 'is-invalid': submittedFinancial && i.credit_limit.errors }"
-                                                   placeholder="" pInputText required />
+                                                   placeholder="" pInputText disabled />
 
                                             <div *ngIf="submittedFinancial && i.credit_limit.errors" class="invalid-feedback">
                                                 <small *ngIf="i.credit_limit.errors.required" class="p-error">Credit Limit is required</small>
@@ -1541,7 +1543,7 @@
                             <td>{{supplierinfo.ShortName}}</td>
                             <td>{{supplierinfo.MobileNo}}</td>
                             <td>{{supplierinfo.Email}}</td>
-                            <td *ngIf="supplierinfo.IsConfirm===true">{{"Confirm"}}</td>
+                            <td *ngIf="supplierinfo.IsConfirm===true">{{"Submitted"}}</td>
                             <td *ngIf="supplierinfo.IsConfirm===false">{{"On Draft"}}</td>
                             <td *ngIf="supplierinfo.FeedbackStatus===0">{{""}}</td>
                             <td *ngIf="supplierinfo.FeedbackStatus===1">{{"Pending"}}</td>
@@ -1550,7 +1552,6 @@
                         </tr>
                     </ng-template>
                 </p-table>
-
                 <!--end grid display -------------->
             </div>
         </div>
