--- a/WebApp/src/app/features/administrative/organogram/organogram.component.html
+++ b/WebApp/src/app/features/administrative/organogram/organogram.component.html
@@ -114,11 +114,18 @@
                         </div>
                         <div class="flex justify-content-left pr-2">
                             <button pButton pRipple type="button" (click)="addtoGrid()" label="Add" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
-                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Remove" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
-                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="deleteConfirmation()" label="Remove" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="organogramdetailActivity()" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"></button>
                         </div>
                         <div class="col-12">
                             <div class="p-fluid p-formgrid grid">
+                                <p-dialog header="Delete Record" [(visible)]="displaychild" [style]="{width: '35vw'}">
+                                    <p>Do you want to delete this record?</p>
+                                    <ng-template pTemplate="footer">
+                                        <button class="pi pi-times risBtn risClose" (click)="displaychild=false"> No</button>
+                                        <button class="pi pi-check risBtn risSave" (click)="deleteOrganogramDetail()"> Yes</button>
+                                    </ng-template>
+                                </p-dialog>
                                 <p-table #dt1 [value]="organogramDetailList" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedorganogramDetail" dataKey="organogram_detail_id" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
                                          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
 
@@ -143,10 +150,10 @@
                                             <td>{{organogramDetail.Activity}}</td>
                                             <td>{{organogramDetail.Experience}}</td>
                                             <!--<td *ngIf="employee.IsActive===true">{{"Active"}}</td>
-                                            <td *ngIf="employee.IsActive===false">{{"InActive"}}</td>-->
+                <td *ngIf="employee.IsActive===false">{{"InActive"}}</td>-->
                                         </tr>
                                     </ng-template>
-                                     
+
                                 </p-table>
                             </div>
                         </div>
@@ -163,8 +170,9 @@
 
                 <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadOrganogramToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="deleteOrganogramConfirmation()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="organogramActiveInactive()" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"></button>
+
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
